second commit after cloning from github

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,21 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- to-do list -->
+
+    <!-- end to do list -->
+
+    <!-- reminders -->
+
+    <!-- end reminders -->
+
+    <!-- money tracking -->
+
+    <!-- end money tracking  -->
+
+    <!-- flashcard -->
+
+    <!-- end flashcard -->
+
 </resources>
