--- a/app/src/main/res/layout/activity_reminder_homepage.xml
+++ b/app/src/main/res/layout/activity_reminder_homepage.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".flashcard.test">
+    tools:context=".reminders.reminder_homepage">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
