--- a/app/src/main/res/layout/activity_todo_home.xml
+++ b/app/src/main/res/layout/activity_todo_home.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".todo.todo_home">
 
+    <Spinner
+        android:id="@+id/t_spinner"
+        android:layout_width="137dp"
+        android:layout_height="23dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="114dp" />
+
+    <RadioGroup
+        android:layout_width="48dp"
+        android:layout_height="40dp"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="190dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
