--- a/app/src/main/res/layout/activity_flashcard_home.xml
+++ b/app/src/main/res/layout/activity_flashcard_home.xml
@@ -6,4 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".flashcard.FlashcardHome">
 
+    <TextView
+        android:id="@+id/flashcard_home_text"
+        android:layout_width="307dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="80dp"
+        android:gravity="center"
+        android:text="@string/flashcard_home_text"
+        android:textColor="@color/dark_shade_blue"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="154dp"
+        android:layout_height="112dp"
+        android:layout_marginTop="288dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/event_icon" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="103dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="76dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flashcard_home_text"
+        app:srcCompat="@drawable/add_icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
