--- a/app/src/main/res/layout/activity_flashcard_home.xml
+++ b/app/src/main/res/layout/activity_flashcard_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/flashcard_home_text"
         android:layout_width="307dp"
         android:layout_height="43dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="96dp"
         android:gravity="center"
         android:text="@string/flashcard_home_text"
         android:textColor="@color/dark_shade_blue"
@@ -19,24 +19,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/f_empty_note_image" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/f_empty_note_image"
         android:layout_width="154dp"
         android:layout_height="112dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="168dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/event_icon" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="103dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="76dp"
+        android:id="@+id/f_add_category_plus"
+        android:layout_width="72dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
