--- a/app/src/main/res/layout/activity_todo_home.xml
+++ b/app/src/main/res/layout/activity_todo_home.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".todo.TodoHome">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todo_recyclerView"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        app:backgroundTint="@color/dark_shade_blue"
+        app:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/add_icon2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
