--- a/app/src/main/res/layout/activity_flashcard_home.xml
+++ b/app/src/main/res/layout/activity_flashcard_home.xml
@@ -6,43 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".flashcard.FlashcardHome">
 
-    <TextView
-        android:id="@+id/flashcard_home_text"
-        android:layout_width="307dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="96dp"
-        android:gravity="center"
-        android:text="@string/flashcard_home_text"
-        android:textColor="@color/dark_shade_blue"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/f_empty_note_image" />
 
-    <ImageView
-        android:id="@+id/f_empty_note_image"
-        android:layout_width="154dp"
-        android:layout_height="112dp"
-        android:layout_marginTop="168dp"
+    <FrameLayout
+        android:id="@+id/flashcard_homepage_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/event_icon" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/f_add_category_plus"
-        android:layout_width="72dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/flashcard_home_text"
-        app:srcCompat="@drawable/add_icon" />
-
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
