--- a/app/src/main/res/layout/flashcard_single_category_layout.xml
+++ b/app/src/main/res/layout/flashcard_single_category_layout.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textAllCaps="true"
+            android:clickable="true"
             android:layout_alignParentLeft="true" />
 
         <ImageView
