--- a/app/src/main/res/layout/flashcard_practice_format_layout.xml
+++ b/app/src/main/res/layout/flashcard_practice_format_layout.xml
@@ -40,7 +40,8 @@
         android:textAlignment="center"
         android:textColor="@color/dark_shade_blue"
         android:textSize="22sp"
-        android:layout_below="@+id/f_btn_close_practice"/>
+        android:layout_below="@+id/f_btn_close_practice"
+        android:visibility="invisible"/>
 
     <Button
         android:id="@+id/f_show_answer"
@@ -52,6 +53,17 @@
         android:text="@string/f_show_answer"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/f_show_question_again"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/f_card_front"
+        android:backgroundTint="@color/light_shade_blue"
+        android:text="@string/f_show_qn_btn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp"
+        android:visibility="invisible"/>
 
 
 
