--- a/app/src/main/res/layout/activity_reminder_home.xml
+++ b/app/src/main/res/layout/activity_reminder_home.xml
@@ -4,6 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_shade_blue"
     tools:context=".reminder.ReminderHome">
+
+    <Button
+        android:id="@+id/get_btn"
+        android:layout_width="183dp"
+        android:layout_height="53dp"
+        android:background="@color/purple_500"
+        android:text="Get Started"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="114dp"
+        tools:layout_editor_absoluteY="533dp" />
+
+    <TextView
+        android:id="@+id/day_txt"
+        android:layout_width="293dp"
+        android:layout_height="39dp"
+        android:text="GoalsOnTrack"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="96dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="346dp"
+        android:layout_height="280dp"
+        app:srcCompat="@drawable/reminder"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="192dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
