--- a/app/src/main/res/layout/activity_flashcard_add_card_to_category.xml
+++ b/app/src/main/res/layout/activity_flashcard_add_card_to_category.xml
@@ -8,7 +8,18 @@
     android:layout_centerVertical="true"
     tools:context=".flashcard.AddCardToCategory">
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/f_title_when_adding_card"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textAllCaps="true"
+            android:textSize="20sp"
+            android:text="Add Word:"
+            android:textColor="@color/dark_shade_blue"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"/>
 
         <EditText
             android:id="@+id/f_add_word"
@@ -19,7 +30,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:ems="10"
-
+            android:layout_below="@+id/f_title_when_adding_card"
             android:gravity="center"
             android:hint="@string/f_enter_word"
             android:inputType="textPersonName" />
