--- a/app/src/main/res/layout/activity_flashcard_all_word_in_category.xml
+++ b/app/src/main/res/layout/activity_flashcard_all_word_in_category.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".flashcard.AllWordInCategory">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/f_list_of_word_in_one_cat"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:textAllCaps="true"
+        android:textSize="20sp"
+        android:textColor="@color/dark_shade_blue"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/f_all_word_list_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-         />
+        android:layout_below="@+id/f_list_of_word_in_one_cat"
+        />
 
 </RelativeLayout>
