--- a/app/src/main/res/layout/flashcard_single_word_list_layout.xml
+++ b/app/src/main/res/layout/flashcard_single_word_list_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:background="@drawable/empty_rectagle">
 
 
 
@@ -9,13 +11,11 @@
             android:id="@+id/f_word_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_margin="10dp"
             android:textAllCaps="true"
             android:layout_alignParentLeft="true"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/dark_shade_blue"/>
 
 
         <ImageView
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/f_word_edit_btn"
             android:src="@drawable/ic_baseline_edit_24"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:clickable="true"
             android:layout_toLeftOf="@+id/f_word_delete_btn"/>
 
@@ -32,7 +32,7 @@
             android:id="@+id/f_word_delete_btn"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_delete_24"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:clickable="true"
             android:layout_toLeftOf="@+id/f_3_dot_menu"/>
 
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/vertical_3_dot_menu"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:layout_alignParentRight="true"/>
 
 
